--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "and": "^0.0.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
